hphp/hack/test/typecheck/genericarguments/generic_new_bad.php.like_types.exp
File "generic_new_bad.php", line 9, characters 19-20:
Invalid argument (Typing[4110])
File "generic_new_bad.php", line 5, characters 39-39:
Expected ~int because it is an unenforceable type
File "generic_new_bad.php", line 8, characters 15-20:
But got string
